Add unit tests for glsp.graph (#50)
* Add unit tests for glsp.graph and jenkins config

Resolves https://github.com/eclipse-glsp/glsp/issues/16